src/objects/fferpcore__MessagingMessage__c.object
<CustomObject>
    <customHelpPage>fferpcore__MessagingMessageHelp</customHelpPage>
    <description>A message</description>
    <fields>
        <fullName>fferpcore__Body01__c</fullName>
        <description>Serialised message body.</description>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationId__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Deletable__c</fullName>
        <formula>fferpcore__LastAttemptedDelivery__c &lt;= fferpcore__MessageType__r.fferpcore__ExpiryCutoff__c  &amp;&amp; 
(ISPICKVAL(fferpcore__State__c, &apos;Complete&apos;) || ISPICKVAL(fferpcore__State__c,&apos;Errors&apos;) || ISPICKVAL(fferpcore__State__c,&apos;Void&apos;))</formula>
        <label>Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__LastAttemptedDelivery__c</fullName>
        <defaultValue>null</defaultValue>
        <description>This is the date when the message was lat attempted to be delivered. This date is used by the message reaper to determine if the message can be deleted.</description>
        <label>LastAttemptedDelivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageType__c</fullName>
        <description>Message Type that this Message belongs to</description>
        <label>Message Type</label>
        <referenceTo>fferpcore__MessageType__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Sender__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__State__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delivering</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TimeToLive__c</fullName>
        <defaultValue>null</defaultValue>
        <description>A value that limits the number of resulting messages when sending messages between registered applications. The value is initially set from the Max Message Delivery Loop Count in the ERP Background Processing Settings custom setting. Each resulting message reduces the value by one until it reaches zero. Once this occurs, resulting messages automatically fail.</description>
        <inlineHelpText>A value that limits the number of resulting messages when sending messages between registered applications.</inlineHelpText>
        <label>Time to Live</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{YYYY}{MM}{0000000000}</displayFormat>
        <label>Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>